[gd_scene load_steps=6 format=3 uid="uid://ud0fhhmvmu6y"]

[ext_resource type="Script" path="res://Assets/Scripts/card_class.gd" id="1_aaloo"]
[ext_resource type="Texture2D" uid="uid://djcrf2hvv1r0" path="res://Assets/Sprites/card.png" id="2_4k4lx"]
[ext_resource type="Texture2D" uid="uid://bgee65gek4ecu" path="res://Assets/Sprites/club.png" id="3_pjdkq"]

[sub_resource type="Theme" id="Theme_3wtwt"]
default_font_size = 256

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy0ec"]
size = Vector2(497.422, 672.983)

[node name="Area2D" type="Area2D"]
position = Vector2(-3, 2)
scale = Vector2(0.375938, 0.375938)
script = ExtResource("1_aaloo")

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("2_4k4lx")

[node name="label" type="Label" parent="."]
offset_left = 98.4205
offset_top = 79.8004
offset_right = 616.421
offset_bottom = 428.801
scale = Vector2(0.543022, 0.543022)
theme = SubResource("Theme_3wtwt")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="label2" type="Label" parent="."]
offset_left = -176.446
offset_top = -256.649
offset_right = 341.554
offset_bottom = 92.3512
scale = Vector2(0.543022, 0.543022)
theme = SubResource("Theme_3wtwt")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="suit" type="Sprite2D" parent="."]
position = Vector2(1.78228, -12.476)
scale = Vector2(0.565489, 0.565489)
texture = ExtResource("3_pjdkq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.99002, 1.32999)
shape = SubResource("RectangleShape2D_cy0ec")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
